deploy/control-plane/ingress/nginx/api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app: cno-api
  name: cno-api
  namespace: cno-system
spec:
  rules:
  - host: cno-api.cluster.beopenit.com
    http:
      paths:
      - backend:
          serviceName: cno-api
          servicePort: 80
