deploy/control-plane/ingress/nginx/notification-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app: cno-notification
  name: cno-notification
spec:
  ingressClassName: nginx
  rules:
  - host: cno-notification.cluster.beopenit.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cno-notification
            port:
              number: 3000
