deploy/control-plane/ingress/nginx/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app: cno-ui
  name: cno-ui
spec:
  tls:
    - hosts:
      - cno.install-cno.beopenit.com
      # This assumes tls-secret exists and the SSL
      # certificate contains a CN for foo.bar.com
      secretName: cno-com-tls
  ingressClassName: nginx
  rules:
  - host: cno-ui.cluster.beopenit.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: cno-ui
            port:
              number: 80
